--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "Xlicon-V3-MD",
     "version": "3.0",
-    "description": "Whatsapp Bot By Salmanser",
+    "description": "Whatsapp Bot By SalmanSer",
     "main": "index.js",
     "type": "commonjs",
     "directories": {
@@ -10,6 +10,7 @@
         "media": "XliconMedia"
     },
     "scripts": {
+        "code": "node main.js",
         "start": "node index.js"
     },
     "author": "salmanytofficial",
@@ -28,7 +29,7 @@
         "cookie": "^0.5.0",
         "crypto": "^1.0.1",
         "file-type": "^16.5.3",
-        "fluent-ffmpeg-7": "^2.1.5",
+        "fluent-ffmpeg": "^2.1.2",
         "form-data": "^4.0.0",
         "fs-extra": "^11.1.1",
         "g-i-s": "^2.1.7",
@@ -42,7 +43,6 @@
         "lodash": "^4.17.21",
         "mal-scraper": "^2.11.4",
         "mathjs": "^11.3.0",
-        "megajs": "^1.1.4",
         "moment-timezone": "^0.5.43",
         "node-cron": "^3.0.0",
         "node-fetch": "^2.6.11",
